<resources>
    <!--Strings-->
    <string name="app_name" translatable="false">ARAssistant</string>
    <string name="login_button">Iniciar sesión</string>
    <string name="email_hint">user@email.com</string>
    <string name="password_hint">Contraseña</string>
    <string name="register_link">Regístrate ahora</string>
    <string name="forgotten_password_hint">¿Olvidó su contraseña?</string>
    <string name="toast_login_bad_credentials">Usuario o contraseña incorerectos</string>
    <string name="toast_generic_error">Se ha producido un error</string>
    <string name="toast_logout_success">Sesión cerrada</string>
    <string name="toast_register_succeed">Register completed successfully!</string>
    <string name="label_create_account">Crear cuenta</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_lastname">Apellidos</string>
    <string name="hint_email" translatable="false">Email</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_repeat_pass">Repetir contraseña</string>
    <string name="error_empty_fields">Este campo no puede estar vacío</string>
    <string name="error_min_length">Demasiado corto, mínimo 3 carácteres</string>
    <string name="error_invalid_email">El formato del email es incorrecto</string>
    <string name="error_pass_length">La contraseña debe tener 6 caráctertes como mínimo</string>
    <string name="error_pass_match">Las contraseñas no coinciden</string>
    <string name="toast_reset_password_email_sent">Le hemos enviado un email para cambiar la contraseña</string>
    <string name="label_task">Tareas</string>
    <string name="label_reminder">Recordatorios</string>
    <string name="label_home">Inicio</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="label_create_task">Nueva tarea</string>
    <string name="hint_title">Titulo</string>
    <string name="hint_desc">Descripción</string>
    <string name="toast_create_task_success">Tarea creada correctamente</string>
    <string name="toast_create_task_error">No se ha podido crear la tarea</string>
    <string name="toast_update_task_success">Tarea actualizada</string>
    <string name="toast_update_task_error">No se ha podido actualizar la tarea</string>
    <string name="toast_get_task_error">No se han podido leer las tareas</string>
    <string name="label_close_dialog">Cerrar</string>
    <string name="label_edit_dialog">Editar</string>
    <string name="label_delete_dialog">Borrar</string>
    <string name="toast_deleted_task">La tarea ha sido eliminada</string>
    <string name="profile_label">Perfil</string>
    <string name="settings_label">Ajustes</string>
    <string name="link_ar_label">Vincular gafas</string>
    <string name="notification_label">Notificaciones</string>
    <string name="family_label">Configurar familia</string>
    <string name="account_label">Cuenta</string>
    <string name="sign_out_label">Cerrar sesión</string>
    <string name="del_acc_label">Borrar cuenta</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="connect_des">Escanea el código con tus gafas</string>
    <string name="toast_delete_task_error">No se ha podido borrar la tarea</string>
    <string name="label_save_task">Guardar</string>
    <string name="label_return">Volver</string>
    <string name="label_category">Categoría</string>
    <string name="label_remember_me">Recordarme</string>
    <string name="select_image_label">Abrir Galería</string>
    <string name="toast_image_upload_success">Imagen subida correctamente</string>
    <string name="toast_image_upload_failure">La imagen no se ha subido</string>
    <string name="toast_image_too_big_error">La imagen debe ser menor de 4096x4096px</string>
    <string name="toast_image_size_too_big_error">La imagen pesa más de 1MB</string>
    <string name="label_time">Hora</string>
    <string name="toast_update_reminder_success">Recordatorio actualizado</string>
    <string name="toast_update_reminder_error">No se ha podido actualizar el recordatorio</string>
    <string name="toast_create_reminder_success">Recordatorio creado</string>
    <string name="toast_create_reminder_error">El recordatorio no se ha podido crear</string>
    <string name="toast_no_past_reminders">No se puede crear recordatorios en el pasado</string>
    <string name="toast_get_reminder_error">No se han podido leer los recordatorios</string>
    <string name="label_create_reminder">Nuevo recordatorio</string>
    <string name="toast_delete_reminder">Recordatorio eliminado</string>
    <string name="toast_delete_reminder_error">No se ha podido borrar el recordatorio</string>
    <string name="dialog_password_recovery">Recuperar contraseña</string>
    <string name="dialog_recovery_pass_message">Escribe el correo con el que creaste la cuenta.</string>
    <string name="dialog_send">Enviar</string>
    <string name="label_see_reminder">Ver recordatorio</string>
    <string name="dialog_delete_account_title">Borrar cuenta</string>
    <string name="dialog_delete_account_message">¿Está seguro de que quiere borrar su cuenta? Volverá al apantalla de login.</string>
    <string name="dialog_delete_button">Borrar</string>
    <string name="toast_account_deleted">Cuenta borrada</string>
    <string name="dialog_cancel">Cancelar</string>
    <string name="label_take_picture">Tomar foto</string>
    <string name="label_record_video">Grabar video</string>
    <string name="label_no_media_selected">Sin archivos</string>
    <string name="toast_video_upload_success">Video subido correctamente</string>
    <string name="toast_video_upload_error">No se ha podido subir el video</string>
    <string name="label_view_video">Ver vídeo</string>
</resources>
