<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:checkableBehavior="single"
        android:enabled="true"
        android:visible="true">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/label_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_group_grey_24dp"
            android:title="@string/profile_label" />
        <item
            android:id="@+id/nav_task"
            android:icon="@drawable/icon_task"
            android:title="@string/label_task" />

        <item
            android:id="@+id/nav_reminder"
            android:icon="@drawable/icon_reminder"
            android:title="@string/label_reminder" />

        <!-- config section -->
        <item
            android:id="@+id/configuration_section"
            android:checkable="true"
            android:enabled="true"
            android:title="@string/settings_label">
            <menu>
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_settings_black_24dp"
                    android:title="@string/settings_label" />
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@android:drawable/ic_lock_power_off"
                    android:title="@string/sign_out_label" />
            </menu>
        </item>
    </group>
</menu>