<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registerNestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".activity.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--Logo-->
        <ImageView
            android:id="@+id/loginLogo"
            android:layout_width="283dp"
            android:layout_height="57dp"
            android:layout_marginTop="60dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo_arassistant"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.535"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--Email-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/loginTextEmailLayout"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:layout_weight="2"
            app:boxBackgroundColor="#00FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:errorEnabled="true"
            app:layout_constraintTop_toBottomOf="@+id/loginLogo">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginTextEmailInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--Password-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/loginTextPasswordLayout"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="2"
            app:endIconMode="password_toggle"
            app:boxBackgroundColor="#00FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:errorEnabled="true"
            app:layout_constraintTop_toBottomOf="@+id/loginTextEmailLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginTextPasswordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--Forgotten Password-->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/loginForgottenPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/forgotten_password_hint"
            android:textColor="#530559"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginTextPasswordLayout">

        </com.google.android.material.textview.MaterialTextView>

        <!--Login button-->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginLoginButton"
            android:layout_width="275dp"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:background="@color/colorPrimary"
            android:text="@string/login_button"
            android:textColor="#000000"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginForgottenPassword" />

        <!--Register Link-->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/loginTextRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/register_link"
            android:textColor="#530559"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginLoginButton">

        </com.google.android.material.textview.MaterialTextView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>